<resources>
    <string name="app_name">PMGroupProject</string>
    <string name="title_login">Login</string>
    <string name="sample_email">example@email.com</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="sample_password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_activity_title">Create Activity</string>
    <string name="activity_title_placeholder">Activity Title</string>
    <string name="sunday_placeholder">SUN</string>
    <string name="monday_placeholder">MON</string>
    <string name="tuesday_placeholder">TUE</string>
    <string name="wednesday_placeholder">WED</string>
    <string name="thursday_placeholder">THU</string>
    <string name="friday_placeholder">FRI</string>
    <string name="saturday_placeholder">SAT</string>
    <string name="on_these_days">On These Days:</string>
    <string name="repeat_every">Repeat:</string>
    <string name="daily_custom">Daily/Custom</string>
    <string name="custom">Custom</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="biweekly">BiWeekly</string>
    <string name="tri_weekly">TriWeekly</string>
    <string name="monthly">Monthly</string>
    <string name="type">Type of Activity:</string>
    <string name="checkable">Checkable</string>
    <string name="timed">Timed</string>
    <string name="countable">Countable</string>
    <string name="note_section">Note Section:</string>
    <string name="create">Create</string>
    <string name="count_goal">Count Goal</string>
    <string name="noteString">Note</string>
    <string name="submitButtonString">Submit</string>
    <string name="progress_default">0%</string>
    <string name="modify_activity">Modify Activity</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>