<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginActivityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textSize="34sp" />

    <LinearLayout
        android:id="@+id/emailViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginActivityTitle"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="Email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/sample_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailViewContainer"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="6dp"
            android:text="Password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/sample_password"
            android:inputType="textPassword"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordViewContainer"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="105dp"
            android:backgroundTint="@color/system_primary"
            android:text="Login"
            android:textSize="16sp"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:layout_marginTop="20dp"
            android:backgroundTint="#00C9C9C9"
            android:text="Create New Account"
            android:textColor="#49A0FB"
            android:textSize="16sp"
            app:icon="@drawable/baseline_arrow_circle_right_24"
            app:iconGravity="textEnd"
            app:iconTint="@color/system_primary" />
    </LinearLayout>

</RelativeLayout>